:sparkles: Feat(News & Topics): Add pagination, update schema soft delete, optimize unit test
